# qrator_labs

./: CMakeLists.txt  README.txt  main.cpp  tasks.h
common/: common.h  defines.h  fill_array.c  print_array.c  random.c
task1/: local_minimum.c  local_minimum.h  task1.cpp
task2/: k_sort.c  k_sort.h  task2.cpp
task3/: task3.cpp  thread_pool.cpp  thread_pool.h
task3/tools/: i_mutex.h  i_thread.h  i_worker.h  mutex.cpp  mutex.h  thread.cpp  thread.h  tools_types.h
